# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml  rust.yml
configuration/: production.yaml
migrations/: 20221218163007_add_status_to_subscriptions.sql  20221218204127_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
